examples/vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        multi:
          destinations:
          - destination:
              upstream:
                name: echo-v1
                namespace: echo 
            weight: 100
          - destination:
              upstream:
                name: echo-v2
                namespace: echo
            weight: 0
